Added update and delete endpoints for subclasses
